2011-06-01  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopServerProvider.c:
	[ 3310364 ] Implement CIM_NamespaceInManager

2011-06-01  Narasimha Sharoff  <nsharoff@us.ibm.com>

	* control.c, genSslCert.sh, httpAdapter.c, sfcb.cfg.pre.in
	[ 3259627 ] provide a list acceptable CAs to client

2011-05-30  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* 10_interop.mof, default.reg.in, interopServerProvider.c, 
	test/xmltest/enumerateinstancenames.ComMech.lines:
	[ 3309374 ] Implement CIM_CIMXMLCommunicationMechanism

2011-05-27 Narasimha Sharoff <nsharoff@us.ibm.com>

	* Makefile.am
	[ 3199899 ] sfcb uninstall process should remove test mof's

2011-05-16 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c
	[ 3296541 ] CIM_IndicationSubscription corrupts after delilvery fails 

2011-05-11  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimRequest.c:
	[ 3300167 ] Memory leaks caused by cimRequest changes

2011-05-10 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopServerProvider.c
	[ 3287789 ] interopServerProvider not conservative when answering reqs

2011-05-09  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* Makefile.am, brokerEnc.c, brokerUpc.c, cimRequest.c, cimXmlGen.c,
	  cimXmlGen.h, classProvider.c, classProviderCommon.h, 
	  classProviderGz.c, classProviderMem.c, classProviderSf.c, 
	  classSchema2c.c, configure.ac, control.c, 
	  elementCapabilitiesProvider.c, fileRepository.h, genericlist.c, 
	  genericlist.h, httpAdapter.c, indCIMXMLExport.c, instance.c,
          internalProvider.c, internalProvider.h, interopProvider.c, 
	  interopServerProvider.c, objectImpl.c, objectImplSwapI32toP32.c, 
	  objectpath.c, objectpath.h, profileProvider.c, providerDrv.c, 
	  providerMgr.c, providerRegister.c, providerRegister.h, result.c, 
	  sfcBroker.c, sfcUtil/hashtable.c, sfcUtil/hashtable.h, 
	  sfcUtil/libsfcUtil.Versions, sfcUtil/utilFactory.c, 
	  sfcUtil/utilHashtable.c, sfcUtil/utilStringBuffer.c, 