@@ -1954,6 +1954,7 @@ release(ClientEnv *ce)
   }
   CONNECT_UNLOCK();
   free(ce);
+  sunsetControl();
   uninitGarbageCollector();
   return lib;
 }
