@@ -183,6 +183,7 @@ Chris Poblete, Dell
 11/10/2010 [ 3101154 ] Daemon clients failed SfcbLocal connect due to permission
 03/09/2011 [ 3202420 ] CDATA value in a string property is improperly XML escaped
 04/28/2011 [ 3202466 ] Single item on method param of array type rejected via Local
+06/09/2011 [ 3314383 ] Memory leak in CimResource_Enumerate_EP
 
 Josef Moellers
 --------------
